# inhibit-suspend

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  inhibit-suspend.service  restart.in  wait-for-signal.c
.github/workflows/: inhibit-suspend.yml
